--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.1.1",
     "@hookform/resolvers": "^3.3.2",
+    "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^8.5.1",
